syntax = "proto3";

package api.stats;

// Put the data frames separately so we can ignore them when we want to load data more quickly.
message DataFrame {
    optional bytes data_frame = 100;
}
